correcao de erros de import

--- a/src/app/cardapioprincipal/cardapio-principal.component.html
+++ b/src/app/cardapioprincipal/cardapio-principal.component.html
@@ -9,7 +9,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','pratododia']" id='desabilitado1'
           class='btn' disabled>
-          <img src='/assets/images/pratododia.jpg' class="figure-img img-fluid
+          <img src='../../assets/images/pratododia.jpg' class="figure-img img-fluid
             rounded" alt="..." width="500"
             height="140">
         </button>
@@ -21,7 +21,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','pratoregional']" id='desabilitado2'
           class='btn' disabled>
-          <img src='/assets/images/baiao-dois-1.jpg' class="figure-img
+          <img src='../../assets/images/baiao-dois-1.jpg' class="figure-img
             img-fluid rounded" alt="..." width="500"
             height="140">
         </button>
@@ -35,7 +35,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','pratoespecial']" id='desabilitado3'
           class='btn' disabled>
-          <img src='/assets/images/pratoespecial.jpg' class="figure-img
+          <img src='../../assets/images/pratoespecial.jpg' class="figure-img
             img-fluid rounded" alt="..." width="500"
             height="140">
         </button>
@@ -47,7 +47,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','porcoes']" id='desabilitado4'
           class='btn' disabled>
-          <img src='/assets/images/porcoes.jpg' class="figure-img img-fluid
+          <img src='../../assets/images/porcoes.jpg' class="figure-img img-fluid
             rounded" alt="..." width="500"
             height="140">
         </button>
@@ -60,7 +60,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','porcoesespeciais']"
           id='desabilitado5' class='btn' disabled>
-          <img src='/assets/images/porcoesespeciais.jpg' class="figure-img
+          <img src='../../assets/images/porcoesespeciais.jpg' class="figure-img
             img-fluid rounded" alt="..." width="500"
             height="140">
         </button>
@@ -72,7 +72,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','salada']" id='desabilitado6'
           class='btn' disabled>
-          <img src='/assets/images/salada.png' class="figure-img img-fluid
+          <img src='../../assets/images/salada.png' class="figure-img img-fluid
             rounded" alt="..." width="500"
             height="140">
         </button>
@@ -85,7 +85,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','saladaespecial']"
           id='desabilitado7' class='btn' disabled>
-          <img src='/assets/images/saladaespecial.jpg' class="figure-img
+          <img src='../../assets/images/saladaespecial.jpg' class="figure-img
             img-fluid rounded" alt="..." width="500"
             height="140">
         </button>
@@ -97,7 +97,7 @@
       <figure class="figure">
         <button [routerLink]="['/produto','bebida']" id='desabilitado8'
           class='btn' disabled>
-          <img src='/assets/images/bebidas.jpg' class="figure-img img-fluid
+          <img src='../../assets/images/bebidas.jpg' class="figure-img img-fluid
             rounded" alt="..." width="500"
             height="140">
         </button>
