exposicao di menu principal

--- a/src/app/cardapioprincipal/cardapio-principal.component.html
+++ b/src/app/cardapioprincipal/cardapio-principal.component.html
@@ -1,15 +1,12 @@
 <app-caminho-menu></app-caminho-menu>
 <br>
-
 <!-- DESKTOP -->
-
 <div class='table-responsive desktop'>
   <div class="row">
     <div class="col-sm-5" style='margin-left: 7em;'>
       <figure class="figure">
-        <button [routerLink]="['/produto','pratododia']" id='desabilitado1'
-          class='btn' disabled>
-          <img src='../../assets/images/pratododia.jpg' class="figure-img img-fluid
+        <button [routerLink]="['/produto','pratododia']" class='btn'>
+          <img src='/assets/images/pratododia.jpg' class="figure-img img-fluid
             rounded" alt="..." width="500"
             height="140">
         </button>
