--- a/src/app/caminho-menu/caminho-menu.component.html
+++ b/src/app/caminho-menu/caminho-menu.component.html
@@ -110,8 +110,7 @@
       </a>
     </mat-grid-tile>
     <mat-grid-tile  gutterSize="1em">
-      <a [routerLink]="['/carrinho']" routerLinkActive="active"
-        class="nav-link">
+      <a [routerLink]="['/carrinho']" routerLinkActive="active" class="nav-link">
         <mat-card [ngStyle]="{'background-color':fundoColoridoPedido ?
           'aquamarine' : ''}"  style="border: 1px solid rgb(77, 40, 146); width: 10em;">
           <mat-card-title>Pedido</mat-card-title>
